This is second commit where Application title has been modified

--- a/Assignment1.html
+++ b/Assignment1.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Self-Order Kiosk</h1>
+    <h1>My Self-Order Kiosk</h1>
     <div id="products">
         <div class="product">
             <h2>Product 1</h2>
